kustomize/components/clair/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clair-postgres
  labels:
    quay-component: clair
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      quay-component: clair-postgres
  template:
    metadata:
      labels:
        quay-component: clair-postgres
    spec:
      serviceAccountName: clair-postgres
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: clair-postgres
      containers:
        - name: postgres
          image: centos/postgresql-10-centos7@sha256:de1560cb35e5ec643e7b3a772ebaac8e3a7a2a8e8271d9e91ff023539b4dfb33
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/pgsql/data
