kustomize/components/clair/upgrade.deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quay-app-upgrade
spec:
  template:
    metadata:
      labels:
        quay-component: quay-app-upgrade
    spec:
      # Init conatainer needed to wait for Clair to initialize (can take minutes) before attempting to validate config.
