kustomize/components/clair/clair.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clair-app
  labels:
    quay-component: clair-app
  annotations:
    component: "clair"
spec:
  ports:
    - name: clair-http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: clair-introspection
      port: 8089
      protocol: TCP
      targetPort: 8089
  selector:
    quay-component: clair-app
  type: ClusterIP
