kustomize/components/clair/postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clair-postgres
  labels:
    quay-component: clair
spec:
  type: ClusterIP
  ports:
    - port: 5432
      protocol: TCP
      name: postgres
      targetPort: 5432
  selector:
    quay-component: clair-postgres
